--- a/source/HousePricesPrediction.ipynb
+++ b/source/HousePricesPrediction.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 301,
    "metadata": {
     "collapsed": false
    },
@@ -149,8 +149,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Le features con correlazione > 0.75 sono: ', ['1stFlrSF', 'OverallQual', 'TotalBsmtSF', 'SalePrice', 'GarageArea', 'TotRmsAbvGrd', 'GarageCars', 'GrLivArea'])\n"
+      "Le features con correlazione > 0.75 sono: \n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "OverallQual   SalePrice       0.790982\n",
+       "SalePrice     OverallQual     0.790982\n",
+       "TotalBsmtSF   1stFlrSF        0.819530\n",
+       "1stFlrSF      TotalBsmtSF     0.819530\n",
+       "GrLivArea     TotRmsAbvGrd    0.825489\n",
+       "TotRmsAbvGrd  GrLivArea       0.825489\n",
+       "GarageCars    GarageArea      0.882475\n",
+       "GarageArea    GarageCars      0.882475\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 301,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -159,7 +177,8 @@
     "best_features = s[s<1].sort_values()[s>soglia]\n",
     "l1, l2 = zip(*best_features.index.tolist())\n",
     "name_best_features = list(set(l1).intersection(l2))\n",
-    "print(\"Le features con correlazione > \"+str(soglia)+\" sono: \",name_best_features)\n"
+    "print(\"Le features con correlazione > \"+str(soglia)+\" sono: \")\n",
+    "best_features\n"
    ]
   },
   {
@@ -507,21 +526,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
