+ Other predictive models [Non capisco perchè facciano così schifo, il codice mi sembra corretto]

--- a/source/HousePricesPrediction.ipynb
+++ b/source/HousePricesPrediction.ipynb
@@ -571,8 +571,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Other predictive models\n",
-    "[Non capisco perchè facciano così schifo, mi sembrano corrett]"
+    "### Other predictive models"
    ]
   },
   {
